--- a/students/static/students/header/header-roomservice.css
+++ b/students/static/students/header/header-roomservice.css
@@ -1,9 +1,9 @@
-@media (min-width: 765px) {
+/*@media (min-width: 765px) {
     .navbar-toggle {
         margin-left: 10px;
         display: inline !important;
     }
-}
+}*/
 
 .navbar-toggle {
     border: none;
